@@ -1,4 +1,7 @@
-﻿$Rev$
+$Rev$
+[2007/09/06]
+DirBrowser.py       Fix refresh bug
+
 [2007/09/02]
 EditorFactory.py Editor.py
                     Fix open un-exists file will popup two message dialog bug
